[gd_scene load_steps=4 format=3 uid="uid://bpbg0w4mlk540"]

[ext_resource type="Texture2D" uid="uid://dbfceyq8157la" path="res://Assets/Common/chatbox.png" id="1_4r363"]
[ext_resource type="Script" path="res://Scripts/Common/Helpers/dialog_box.gd" id="1_63n5o"]
[ext_resource type="FontFile" uid="uid://b2wqckoq8yurf" path="res://Assets/Common/fonts/joystix monospace.otf" id="2_7xss4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -269.0
offset_top = -155.0
offset_right = 269.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_63n5o")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="dialog_box" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_right = -13.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="dialog_box"]
z_index = 4
layout_mode = 2
texture = ExtResource("1_4r363")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="dialog_box"]
z_index = 4
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="RichTextLabel" type="RichTextLabel" parent="dialog_box/MarginContainer"]
z_index = 5
texture_filter = 1
texture_repeat = 1
layout_mode = 2
theme_override_colors/default_color = Color(0.160784, 0.105882, 0.435294, 1)
theme_override_fonts/normal_font = ExtResource("2_7xss4")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
scroll_active = false

[node name="Timer" type="Timer" parent="dialog_box"]
one_shot = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
z_index = 2
layout_mode = 0
offset_left = 77.0
offset_top = -21.0
offset_right = 197.0
offset_bottom = 19.0
texture = ExtResource("1_4r363")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="name_blueboy" type="RichTextLabel" parent="NinePatchRect"]
z_index = 5
layout_mode = 2
offset_left = 13.0
offset_top = 2.0
offset_right = 107.0
offset_bottom = 26.0
theme_override_colors/default_color = Color(0.160784, 0.105882, 0.435294, 1)
theme_override_fonts/normal_font = ExtResource("2_7xss4")
bbcode_enabled = true
text = "Blueboy"

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
z_index = 3
layout_mode = 0
offset_left = 341.0
offset_top = -21.0
offset_right = 461.0
offset_bottom = 19.0
texture = ExtResource("1_4r363")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="name_npc" type="RichTextLabel" parent="NinePatchRect2"]
z_index = 5
layout_mode = 2
offset_left = 14.0
offset_top = 2.0
offset_right = 110.0
offset_bottom = 25.0
theme_override_colors/default_color = Color(0.160784, 0.105882, 0.435294, 1)
theme_override_fonts/normal_font = ExtResource("2_7xss4")
theme_override_font_sizes/normal_font_size = 16

[connection signal="timeout" from="dialog_box/Timer" to="dialog_box" method="_on_timer_timeout"]
